--- a/demos/package.json
+++ b/demos/package.json
@@ -20,9 +20,10 @@
         "@angular/core": "^5.0.0",
         "@angular/forms": "^5.0.0",
         "@angular/http": "^5.0.0",
-        "@angular/router": "^5.0.0",
         "@angular/platform-browser": "^5.0.0",
-        "@angular/platform-browser-dynamic": "^5.0.0"
+        "@angular/platform-browser-dynamic": "^5.0.0",
+        "@angular/router": "^5.0.0",
+        "@fortawesome/fontawesome-free-webfonts": "^1.0.4"
     },
     "devDependencies": {
         "@angular/compiler": "^5.0.0",
