--- a/.travis.yml
+++ b/.travis.yml
@@ -25,12 +25,14 @@ before_deploy:
 - cd dist
 # update package versions
 - npm version "${TRAVIS_TAG}" --no-git-tag-version --save
+- if [[ "${TRAVIS_TAG}" == *"beta"* ]]; then export NPM_TAG="next"; else export NPM_TAG="latest"; fi
 
 # copy readme
 - cp ../README.md README.md
 
 deploy:
   provider: npm
+  tag: ${NPM_TAG}
   skip_cleanup: true
   email: igniteui@infragistics.com
   api_key:
