--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
         "@angular/platform-browser": "^5.2.0",
         "@angular/platform-browser-dynamic": "^5.2.0",
         "hammerjs": "^2.0.8",
-        "rxjs": "^5.5.6"
+        "rxjs": "^5.5.6",
+        "jszip": "^3.1.5"
     },
     "devDependencies": {
         "@angular/compiler-cli": "^5.2.0",
