build(exporters): Modified builds for exporters

--- a/tsconfig-aot.json
+++ b/tsconfig-aot.json
@@ -22,7 +22,8 @@
       ]
     },
     "files": [
-      "./tmp/src-inlined/main.ts"
+      "./tmp/src-inlined/main.ts",
+      "./tmp/src-inlined/services/index.ts"
     ],
     "angularCompilerOptions": {
       "genDir": "dist",
