--- a/package.json
+++ b/package.json
@@ -45,66 +45,66 @@
         "postinstall": "gulp copy-git-hooks"
     },
     "dependencies": {
-        "@angular/animations": "^5.2.0",
-        "@angular/common": "^5.2.0",
-        "@angular/compiler": "^5.2.0",
-        "@angular/core": "^5.2.0",
-        "@angular/forms": "^5.2.0",
-        "@angular/platform-browser": "^5.2.0",
-        "@angular/platform-browser-dynamic": "^5.2.0",
+        "@angular/animations": "^5.2.10",
+        "@angular/common": "^5.2.10",
+        "@angular/compiler": "^5.2.10",
+        "@angular/core": "^5.2.10",
+        "@angular/forms": "^5.2.10",
+        "@angular/platform-browser": "^5.2.10",
+        "@angular/platform-browser-dynamic": "^5.2.10",
         "hammerjs": "^2.0.8",
-        "rxjs": "^5.5.6",
-        "jszip": "^3.1.5"
+        "jszip": "^3.1.5",
+        "rxjs": "^5.5.10"
     },
     "devDependencies": {
-        "@angular/compiler-cli": "^5.2.0",
-        "@angular/platform-server": "^5.2.0",
+        "@angular/compiler-cli": "^5.2.10",
+        "@angular/platform-server": "^5.2.10",
         "@types/hammerjs": "^2.0.35",
-        "@types/jasmine": "^2.8.4",
+        "@types/jasmine": "^2.8.6",
         "@types/karma": "^1.7.3",
-        "@types/node": "^8.0.47",
-        "@types/webpack": "^3.8.2",
-        "@types/webpack-env": "^1.13.3",
+        "@types/node": "^8.10.10",
+        "@types/webpack": "^3.8.12",
+        "@types/webpack-env": "^1.13.6",
         "angular2-template-loader": "^0.6.2",
-        "autoprefixer": "^7.2.5",
-        "awesome-typescript-loader": "^3.4.1",
-        "codelyzer": "^4.1.0",
+        "autoprefixer": "^7.2.6",
+        "awesome-typescript-loader": "^3.5.0",
+        "codelyzer": "^4.3.0",
         "concurrently": "^3.5.1",
         "coveralls": "^3.0.0",
-        "css-loader": "^0.28.8",
+        "css-loader": "^0.28.11",
         "extract-text-webpack-plugin": "^3.0.2",
         "gulp": "^3.9.1",
         "gulp-inline-ng2-template": "^4.1.0",
         "gulp-postcss": "^7.0.1",
-        "gulp-sass": "^3.1.0",
+        "gulp-sass": "^3.2.1",
         "gulp-sourcemaps": "^2.6.4",
         "hammer-simulator": "git+https://github.com/hammerjs/simulator.git",
-        "istanbul-instrumenter-loader": "^3.0.0",
-        "jasmine-core": "^2.8.0",
+        "istanbul-instrumenter-loader": "^3.0.1",
+        "jasmine-core": "^2.99.1",
         "json-loader": "^0.5.7",
-        "karma": "^2.0.0",
+        "karma": "^2.0.2",
         "karma-chrome-launcher": "^2.2.0",
-        "karma-coverage-istanbul-reporter": "^1.3.3",
+        "karma-coverage-istanbul-reporter": "^1.4.2",
         "karma-jasmine": "^1.1.1",
         "karma-mocha-reporter": "^2.2.5",
         "karma-sourcemap-loader": "^0.3.7",
-        "karma-webpack": "^2.0.9",
-        "node-sass": "^4.7.2",
+        "karma-webpack": "^2.0.13",
+        "node-sass": "^4.9.0",
         "raw-loader": "^0.5.1",
         "rimraf": "^2.6.2",
-        "sass-loader": "^6.0.6",
+        "sass-loader": "^6.0.7",
         "sassdoc": "^2.5.0",
         "source-map-explorer": "^1.5.0",
         "stylelint": "^8.4.0",
-        "stylelint-scss": "^2.3.0",
+        "stylelint-scss": "^2.5.0",
         "to-string-loader": "^1.1.5",
         "ts-node": "^4.1.0",
         "tslint": "^5.9.1",
         "typedoc": "^0.9.0",
-        "typescript": "^2.6.2",
-        "webpack": "^3.10.0",
+        "typescript": "^2.8.3",
+        "webpack": "^3.11.0",
         "webpack-angular-externals": "^1.0.2",
         "webpack-rxjs-externals": "^1.1.0",
-        "zone.js": "^0.8.20"
+        "zone.js": "^0.8.26"
     }
 }
