--- a/package.json
+++ b/package.json
@@ -45,20 +45,20 @@
         "postinstall": "gulp copy-git-hooks"
     },
     "dependencies": {
-        "@angular/animations": "^5.2.10",
-        "@angular/common": "^5.2.10",
-        "@angular/compiler": "^5.2.10",
-        "@angular/core": "^5.2.10",
-        "@angular/forms": "^5.2.10",
-        "@angular/platform-browser": "^5.2.10",
-        "@angular/platform-browser-dynamic": "^5.2.10",
+        "@angular/animations": "^6.0.0",
+        "@angular/common": "^6.0.0",
+        "@angular/compiler": "^6.0.0",
+        "@angular/core": "^6.0.0",
+        "@angular/forms": "^6.0.0",
+        "@angular/platform-browser": "^6.0.0",
+        "@angular/platform-browser-dynamic": "^6.0.0",
         "hammerjs": "^2.0.8",
         "jszip": "^3.1.5",
-        "rxjs": "^5.5.10"
+        "rxjs": "^6.1.0"
     },
     "devDependencies": {
-        "@angular/compiler-cli": "^5.2.10",
-        "@angular/platform-server": "^5.2.10",
+        "@angular/compiler-cli": "^6.0.0",
+        "@angular/platform-server": "^6.0.0",
         "@types/hammerjs": "^2.0.35",
         "@types/jasmine": "^2.8.6",
         "@types/karma": "^1.7.3",
@@ -101,7 +101,7 @@
         "ts-node": "^4.1.0",
         "tslint": "^5.9.1",
         "typedoc": "^0.9.0",
-        "typescript": "^2.8.3",
+        "typescript": "2.7.2",
         "webpack": "^3.11.0",
         "webpack-angular-externals": "^1.0.2",
         "webpack-rxjs-externals": "^1.1.0",
