--- a/tsconfig-aot.json
+++ b/tsconfig-aot.json
@@ -3,10 +3,10 @@
       "target": "es5",
       "module": "es2015",
       "moduleResolution": "node",
-      "sourceMap": true,
+      "sourceMap": false,
       "lib": ["es2015", "dom"],
       "declaration": true,
-      "removeComments": false,
+      "removeComments": true,
       "noImplicitAny": false,
       "experimentalDecorators": true,
       "emitDecoratorMetadata": true,
@@ -33,6 +33,6 @@
       "strictMetadataEmit": true,
       "strictInjectionParameters": true,
       "fullTemplateTypeCheck": true,
-      "preserveWhitespace": false
+      "preserveWhitespaces": false
     }
 }
